mongodb/k8s/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app
spec:
  selector:
    matchLabels:
      app: mongo-app
      app.kubernetes.io/name: mongo-app
  template:
    metadata:
      labels:
        app: mongo-app
        app.kubernetes.io/name: mongo-app
    spec:
      containers:
      - name: mongo-app
        image: bzhtux/mongo-app:v0.0.4
        imagePullPolicy: Always
        volumeMounts:
        - name: services-bindings
          mountPath: "/bindings"
          readOnly: true
      volumes:
      - name: services-bindings
        projected:
          sources:
          - secret:
              name: mongo
              items:
                - key: host
                  path: mongodb/host
                - key: port
                  path: mongodb/port
                - key: username
                  path: mongodb/username
                - key: password
                  path: mongodb/password
                - key: type
                  path: mongodb/type
