mongodb/k8s/04.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-apps-ingress
spec:
  ingressClassName: contour
  rules:
  - host: gomongo.127.0.0.1.nip.io
    http:
      paths:
      - backend: 
          service:
            name: mongo-app-svc
            port:
              number: 8080
        pathType: Prefix
        path: /
